[tool.poetry]
name = "graphdb"
version = "0.1.0"
description = ""
authors = ["asm-1 <asiman.gasanov.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib-inline = "0.1.6"
matplotlib = "3.8.3"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
